feat: i18n files validation script, and implementation on pre-commit, eslint now validates javascript files

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "shared": {
-    "example": "Internationalized example text"
+    "example": "Internationalized example text",
+    "welcome": "Welcome to our application"
   },
   "auth": {
   },
