--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -1,6 +1,7 @@
 {
   "shared": {
-    "example": "Texto de ejemplo internacionalizado"
+    "example": "Texto de ejemplo internacionalizado",
+    "welcome": "Bienvenido a nuestra aplicación"
   },
   "auth": {
   },
